--- a/tasks/configure-master.yml
+++ b/tasks/configure-master.yml
@@ -28,8 +28,7 @@
 
 - name: "Stage 2: initialize new postgresql cluster"
   sudo: yes
-  sudo_user: "{{ postgresql_admin_user }}"
-  command: "/usr/pgsql-{{ postgresql_version }}/bin/initdb -D /var/lib/pgsql/{{ postgresql_version }}/data"
+  command: "su - {{ postgresql_admin_user }} -c '/usr/pgsql-{{ postgresql_version }}/bin/initdb -D /var/lib/pgsql/{{ postgresql_version }}/data'"
 
 - name: "Stage 2: configure pg_hba.conf"
   template:
