--- a/tasks/databases.yml
+++ b/tasks/databases.yml
@@ -14,8 +14,7 @@
 
 - name: "Stage: 4: add extensions"
   sudo: yes
-  sudo_user: "{{ postgresql_admin_user }}"
-  command: "psql {{ item[0].name }} -c 'CREATE EXTENSION IF NOT EXISTS {{ item[1] }}'"
+  command: "sudo su - {{ postgresql_admin_user }} -c \"psql {{ item[0].name }} -c 'CREATE EXTENSION IF NOT EXISTS {{ item[1] }}'\""
   with_nested:
     - postgresql_databases
     - postgresql_extensions
